--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
 <link rel="shortcut icon" href="gardan.gif" type="gif">
 </head>
 <body text="#C71585" bgcolor="#000000" background="1.jpg">
-<body text="#336699" bgcolor="#000000" link="#339999" alink="#339999" vlink="#339999">
+<body text="#336699" bgcolor="#000000" link="#8A2BE2" alink="#8A2BE2" vlink="#8A2BE2">
 <center>
 <H1>Острые лезвия</H1>
 <H1><font color="#FF00FF"> билборды </font> :) </center></H1>
